--- a/Vienna/Resources/es.lproj/Localizable.strings
+++ b/Vienna/Resources/es.lproj/Localizable.strings
@@ -4,6 +4,9 @@
 /* No comment provided by engineer. */
 "(Untitled Feed)" = "(Fuente sin título)";
 
+/* Appended to application name in Open With menu */
+"%@ (default)" = "%@ (Por omisión)";
+
 /* No comment provided by engineer. */
 "%@ Info" = "Información de %@";
 
@@ -33,6 +36,9 @@
 
 /* No comment provided by engineer. */
 "%u unread" = "%u no leídos";
+
+/* Title in popup submenu */
+"<None>" = "<Ninguna>";
 
 /* No comment provided by engineer. */
 "A folder with that name already exists" = "Una carpeta con ese nombre ya existe";
@@ -279,6 +285,9 @@
 /* No comment provided by engineer. */
 "Forcing Refresh subscriptions…" = "Forzando actualizar suscripciones…";
 
+/* Toolbar item name for the General preference pane */
+"General" = "General";
+
 /* Title of a menu item */
 "Get Info" = "Obtener información";
 
@@ -406,6 +415,9 @@
 "New Tab" = "Nueva pestaña";
 
 /* No comment provided by engineer. */
+"No" = "No";
+
+/* No comment provided by engineer. */
 "No articles in feed" = "No hay artículos en la fuente";
 
 /* No comment provided by engineer. */
@@ -461,6 +473,9 @@
 
 /* Title of a menu item */
 "Open Subscription Home Page in External Browser" = "Abrir página de la suscripción en un navegador externo";
+
+/* No comment provided by engineer. */
+"Open With" = "Abrir con";
 
 /* No comment provided by engineer. */
 "Other" = "Otro";
@@ -650,11 +665,13 @@
 "Unsubscribe from Feed" = "Cancelar suscripción";
 
 /* No comment provided by engineer. */
-"Unsubscribing from an Open Reader RSS feed will also remove your locally cached articles." = "Make sure the username and password needed to access the Open Reader server are correctly set in Vienna's preferences.
-Also check your network access.";
+"Unsubscribing from an Open Reader RSS feed will also remove your locally cached articles." = "Cancelando la suscripción de una fuente RSS de Open Reader también borrará los artículos almacenados localmente.";
 
 /* Title of a button on an alert */
 "Upgrade Database" = "Actualizar base de datos";
+
+/* URL */
+"URL" = "URL";
 
 /* No comment provided by engineer. */
 "Vienna cannot open the file \"%@\" because it moved since you downloaded it." = "Vienna no puede abrir el archivo \"%@\" ya que fue movido desde que fue descargado.";
