--- a/Vienna/Resources/zh-Hans.lproj/Localizable.strings
+++ b/Vienna/Resources/zh-Hans.lproj/Localizable.strings
@@ -361,7 +361,7 @@
 "Locate…" = "定位中...";
 
 /* No comment provided by engineer. */
-"Make sure the username and password needed to access the Open Reader server are correctly set in Vienna's preferences. Also check your network access." = "请确保登入 Open Reader 服务器的用户名和密码已在 Vienna 首选项中正确设置。\\n另请确保网络连通。";
+"Make sure the username and password needed to access the Open Reader server are correctly set in Vienna's preferences. Also check your network access." = "请确保登入 Open Reader 服务器的用户名和密码已在 Vienna 首选项中正确设置。\n另请确保网络连通。";
 
 /* Title of a menu item */
 "Mark All Articles as Read" = "标记所有文章为已读";
